@@ -48,7 +48,6 @@ import org.junit.Test;
 public class TestSQLHandler extends SolrCloudTestCase {
 
   private static final String COLLECTIONORALIAS = "collection1";
-  private static final int TIMEOUT = DEFAULT_TIMEOUT;
   private static final String id = "id";
 
   private static boolean useAlias;
@@ -210,83 +209,83 @@ public class TestSQLHandler extends SolrCloudTestCase {
             "stmt",
             "select id, field_i, str_s, field_f, field_d, field_l from collection1 where (text_t='(XXXX)' OR text_t='XXXX') AND text_t='XXXX' order by field_i desc");
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
     List<Tuple> tuples = getTuples(sParams, baseUrl);
 
     assertEquals(8, tuples.size());
     Tuple tuple;
 
-    tuple = tuples.get(0);
-    assertEquals(tuple.getLong("id").longValue(), 8);
-    assertEquals(tuple.getLong("field_i").longValue(), 60);
+    tuple = tuples.getFirst();
+    assertEquals(8, tuple.getLong("id").longValue());
+    assertEquals(60, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 60L);
-    assertEquals(tuple.getDouble("field_f"), 60.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 60.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 60);
+    assertEquals(60L, tuple.getLong("field_i").longValue());
+    assertEquals(60.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(60.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(60, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(1);
-    assertEquals(tuple.getLong("id").longValue(), 7);
-    assertEquals(tuple.getLong("field_i").longValue(), 50);
+    assertEquals(7, tuple.getLong("id").longValue());
+    assertEquals(50, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 50);
-    assertEquals(tuple.getDouble("field_f"), 50.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 50.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 50);
+    assertEquals(50, tuple.getLong("field_i").longValue());
+    assertEquals(50.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(50.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(50, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(2);
-    assertEquals(tuple.getLong("id").longValue(), 6);
-    assertEquals(tuple.getLong("field_i").longValue(), 40);
+    assertEquals(6, tuple.getLong("id").longValue());
+    assertEquals(40, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 40);
-    assertEquals(tuple.getDouble("field_f"), 40.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 40.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 40);
+    assertEquals(40, tuple.getLong("field_i").longValue());
+    assertEquals(40.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(40.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(40, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(3);
-    assertEquals(tuple.getLong("id").longValue(), 5);
-    assertEquals(tuple.getLong("field_i").longValue(), 30);
+    assertEquals(5, tuple.getLong("id").longValue());
+    assertEquals(30, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 30);
-    assertEquals(tuple.getDouble("field_f"), 30.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 30.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 30);
+    assertEquals(30, tuple.getLong("field_i").longValue());
+    assertEquals(30.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(30.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(30, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(4);
-    assertEquals(tuple.getLong("id").longValue(), 3);
-    assertEquals(tuple.getLong("field_i").longValue(), 20);
+    assertEquals(3, tuple.getLong("id").longValue());
+    assertEquals(20, tuple.getLong("field_i").longValue());
     assertEquals("a", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 20);
-    assertEquals(tuple.getDouble("field_f"), 20.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 20.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 20);
+    assertEquals(20, tuple.getLong("field_i").longValue());
+    assertEquals(20.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(20.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(20, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(5);
-    assertEquals(tuple.getLong("id").longValue(), 4);
-    assertEquals(tuple.getLong("field_i").longValue(), 11);
+    assertEquals(4, tuple.getLong("id").longValue());
+    assertEquals(11, tuple.getLong("field_i").longValue());
     assertEquals("b", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 11);
-    assertEquals(tuple.getDouble("field_f"), 11.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 11.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 11);
+    assertEquals(11, tuple.getLong("field_i").longValue());
+    assertEquals(11.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(11.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(11, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(6);
-    assertEquals(tuple.getLong("id").longValue(), 2);
-    assertEquals(tuple.getLong("field_i").longValue(), 8);
+    assertEquals(2, tuple.getLong("id").longValue());
+    assertEquals(8, tuple.getLong("field_i").longValue());
     assertEquals("b", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 8);
-    assertEquals(tuple.getDouble("field_f"), 8.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 8.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 8);
+    assertEquals(8, tuple.getLong("field_i").longValue());
+    assertEquals(8.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(8.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(8, tuple.getLong("field_l").longValue());
 
     tuple = tuples.get(7);
-    assertEquals(tuple.getLong("id").longValue(), 1);
-    assertEquals(tuple.getLong("field_i").longValue(), 7);
+    assertEquals(1, tuple.getLong("id").longValue());
+    assertEquals(7, tuple.getLong("field_i").longValue());
     assertEquals("a", tuple.get("str_s"));
-    assertEquals(tuple.getLong("field_i").longValue(), 7);
-    assertEquals(tuple.getDouble("field_f"), 7.5, 0.0);
-    assertEquals(tuple.getDouble("field_d"), 7.5, 0.0);
-    assertEquals(tuple.getLong("field_l").longValue(), 7);
+    assertEquals(7, tuple.getLong("field_i").longValue());
+    assertEquals(7.5, tuple.getDouble("field_f"), 0.0);
+    assertEquals(7.5, tuple.getDouble("field_d"), 0.0);
+    assertEquals(7, tuple.getLong("field_l").longValue());
 
     // Assert field order
     // assertResponseContains(clients.get(0), sParams,
@@ -301,7 +300,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(8, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(8, tuple.getLong("id").longValue());
     assertEquals(60, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
@@ -350,7 +349,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(8, tuple.getLong("id").longValue());
     assertEquals(60, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
@@ -364,7 +363,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(3, tuple.getLong("id").longValue());
     assertEquals(20, tuple.getLong("field_i").longValue());
     assertEquals("a", tuple.get("str_s"));
@@ -388,7 +387,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(3, tuple.getLong("myId").longValue());
     assertEquals(20, tuple.getLong("myInt").longValue());
     assertEquals("a", tuple.get("myString"));
@@ -412,7 +411,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(3, tuple.getLong("myId").longValue());
     assertEquals(20, tuple.getLong("myInt").longValue());
     assertEquals("a", tuple.get("myString"));
@@ -446,7 +445,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
     tuples = getTuples(sParams, baseUrl);
 
     assertEquals(1, tuples.size());
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(8, tuple.getLong("id").longValue());
     assertEquals(60, tuple.getLong("field_i").longValue());
     assertEquals("c", tuple.get("str_s"));
@@ -470,7 +469,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add("id", "1", "text_t", "XXXX XXXX", "str_s", "a", "field_i", "7")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params("caseSensitive", "true", "stmt", "select id, FIELD_I from collection1 limit 1");
@@ -547,7 +546,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
             "witha\"quote")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     // Equals
     SolrParams sParams = params("stmt", "select id from collection1 where id = 1 order by id asc");
@@ -556,7 +555,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    Tuple tuple = tuples.get(0);
+    Tuple tuple = tuples.getFirst();
     assertEquals("1", tuple.get("id"));
 
     // Not Equals <>
@@ -566,7 +565,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(7, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("2", tuple.get("id"));
     tuple = tuples.get(1);
     assertEquals("3", tuple.get("id"));
@@ -590,7 +589,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
     //
     // assertEquals(7, tuples.size());
     //
-    // tuple = tuples.get(0);
+    // tuple = tuples.getFirst();
     // assertEquals(2L, tuple.get("id"));
     // tuple = tuples.get(1);
     // assertEquals(3L, tuple.get("id"));
@@ -612,7 +611,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("1", tuple.get("id"));
 
     // Less than equal
@@ -622,7 +621,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("1", tuple.get("id"));
     tuple = tuples.get(1);
     assertEquals("2", tuple.get("id"));
@@ -634,7 +633,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("8", tuple.get("id"));
 
     // Greater than equal
@@ -644,7 +643,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("7", tuple.get("id"));
     tuple = tuples.get(1);
     assertEquals("8", tuple.get("id"));
@@ -673,7 +672,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add("id", "8", "Text_t", "XXXX XXXX", "Str_s", "c", "Field_i", "60")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -688,7 +687,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(8, tuple.getLong("id").longValue());
     assertEquals(60, tuple.getLong("Field_i").longValue());
     assertEquals("c", tuple.get("Str_s"));
@@ -738,7 +737,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(tuples.toString(), 2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("Str_s"));
     assertEquals(60, tuple.getDouble("EXPR$1"), 0.0);
 
@@ -757,7 +756,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("Str_s"));
     assertEquals(60, tuple.getDouble("EXPR$1"), 0.0);
 
@@ -780,7 +779,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add("id", "8", "text_t", "XXXX XXXX", "str_s", "c", "field_i", "60")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -796,7 +795,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -832,7 +831,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -868,7 +867,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("myString"));
     assertEquals(60, tuple.getLong("myInt").longValue());
 
@@ -904,7 +903,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -921,7 +920,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -962,7 +961,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -985,7 +984,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add("id", "8", "text_t", "XXXX XXXX", "str_s", "c", "field_i", "60")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -997,7 +996,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
     List<Tuple> tuples = getTuples(sParams, baseUrl);
 
     assertEquals(6, tuples.size());
-    Tuple tuple = tuples.get(0);
+    Tuple tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -1033,7 +1032,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -1068,7 +1067,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("myString"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -1104,7 +1103,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -1124,7 +1123,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -1159,7 +1158,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
     tuples = getTuples(sParams, baseUrl);
     assertEquals(tuples.toString(), 2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -1182,7 +1181,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add("id", "8", "text_t", "XXXX XXXX", "str_s", "c", "field_i", "60")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
     SolrParams sParams =
         params(
             "numWorkers",
@@ -1198,7 +1197,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -1236,7 +1235,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -1274,7 +1273,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("myString"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -1312,7 +1311,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(60, tuple.getLong("field_i").longValue());
 
@@ -1334,7 +1333,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -1372,7 +1371,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("a", tuple.get("str_s"));
     assertEquals(1, tuple.getLong("field_i").longValue());
 
@@ -1396,7 +1395,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add("id", "9", "text_t", "XXXX XXXY", "str_s", "d", "field_i", "70")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -1414,7 +1413,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("b", tuple.get("str_s"));
     assertEquals(2, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(19, tuple.getDouble("EXPR$2"), 0.0); // sum(field_i)
@@ -1444,7 +1443,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
     // Only two results because of the limit.
     assertEquals(2, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("b", tuple.get("str_s"));
     assertEquals(2, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(19, tuple.getDouble("EXPR$2"), 0.0); // sum(field_i)
@@ -1476,7 +1475,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(tuples.toString(), 3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("str_s"));
     assertEquals(4, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(180, tuple.getDouble("EXPR$2"), 0.0); // sum(field_i)
@@ -1516,7 +1515,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("c", tuple.get("myString"));
     assertEquals(4, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(180, tuple.getDouble("mySum"), 0.0);
@@ -1552,7 +1551,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("b", tuple.get("str_s"));
     assertEquals(2, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(19, tuple.getDouble("EXPR$2"), 0.0); // sum(field_i)
@@ -1573,7 +1572,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("b", tuple.get("str_s"));
     assertEquals(2, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(19, tuple.getDouble("EXPR$2"), 0.0); // sum(field_i)
@@ -1594,7 +1593,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals("b", tuple.get("str_s"));
     assertEquals(2, tuple.getDouble("EXPR$1"), 0.0); // count(*)
     assertEquals(19, tuple.getDouble("mySum"), 0.0);
@@ -1632,7 +1631,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add(id, "9", "a_s", "hello0", "a_i", "14", "a_f", "10")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -1646,7 +1645,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     // Test Long and Double Sums
 
-    Tuple tuple = tuples.get(0);
+    Tuple tuple = tuples.getFirst();
 
     Double count = tuple.getDouble("EXPR$0"); // count(*)
     Double sumi = tuple.getDouble("EXPR$1"); // sum(a_i)
@@ -1680,7 +1679,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     // Test Long and Double Sums
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
 
     count = tuple.getDouble("myCount");
     sumi = tuple.getDouble("mySum");
@@ -1715,7 +1714,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     // Test Long and Double Sums
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
 
     count = tuple.getDouble("myCount");
     sumi = tuple.getDouble("mySum");
@@ -1749,7 +1748,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
 
     count = tuple.getDouble("EXPR$0"); // count(*)
     sumi = tuple.getDouble("EXPR$1"); // sum(a_i)
@@ -1782,7 +1781,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(1, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
 
     count = tuple.getDouble("EXPR$0"); // count(*)
     sumi = tuple.getDouble("EXPR$1"); // sum(a_i)
@@ -1829,7 +1828,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add(id, "8", "year_i", "2014", "month_i", "4", "day_i", "2", "item_i", "1")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -1844,7 +1843,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(66, tuple.getDouble("EXPR$1"), 0.0); // sum(item_i)
 
@@ -1862,7 +1861,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(11, tuple.getLong("month_i").longValue());
     assertEquals(57, tuple.getDouble("EXPR$2"), 0.0); // sum(item_i)
@@ -1887,7 +1886,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(11, tuple.getLong("month_i").longValue());
     assertEquals(8, tuple.getLong("day_i").longValue());
@@ -1938,7 +1937,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add(id, "8", "text_t", "XXXX XXXX", "str_s", "c", "field_i", "60")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -2020,7 +2019,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add(id, "8", "year_i", "2014", "month_i", "4", "day_i", "2", "item_i", "1")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -2035,7 +2034,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(66, tuple.getDouble("EXPR$1"), 0.0); // sum(item_i)
 
@@ -2055,7 +2054,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(11, tuple.getLong("month_i").longValue());
     assertEquals(57, tuple.getDouble("EXPR$2"), 0.0); // sum(item_i)
@@ -2082,7 +2081,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(11, tuple.getLong("month_i").longValue());
     assertEquals(8, tuple.getLong("day_i").longValue());
@@ -2133,7 +2132,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         .add(id, "8", "year_i", "2014", "month_i", "4", "day_i", "2", "item_i", "1")
         .commit(cluster.getSolrClient(), COLLECTIONORALIAS);
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
 
     SolrParams sParams =
         params(
@@ -2150,7 +2149,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     Tuple tuple;
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertTrue(
         tuple.get("year_i")
@@ -2176,7 +2175,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(3, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(11, tuple.getLong("month_i").longValue());
     assertTrue(tuple.get("year_i") instanceof Long);
@@ -2207,7 +2206,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     assertEquals(6, tuples.size());
 
-    tuple = tuples.get(0);
+    tuple = tuples.getFirst();
     assertEquals(2015, tuple.getLong("year_i").longValue());
     assertEquals(11, tuple.getLong("month_i").longValue());
     assertEquals(8, tuple.getLong("day_i").longValue());
@@ -2278,13 +2277,13 @@ public class TestSQLHandler extends SolrCloudTestCase {
 
     SolrParams sParams = params("stmt", "select id from collection1 where str_s IN ('a','b','c')");
 
-    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    String baseUrl = cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
     List<Tuple> tuples = getTuples(sParams, baseUrl);
     assertEquals(3, tuples.size());
   }
 
   private String sqlUrl() {
-    return cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    return cluster.getJettySolrRunners().getFirst().getBaseUrl().toString();
   }
 
   private List<Tuple> expectResults(String sql, final int expectedCount) throws Exception {
@@ -2683,7 +2682,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
             + " FROM $ALIAS";
 
     List<Tuple> tuples = expectResults(sql, 1);
-    Tuple stats = tuples.get(0);
+    Tuple stats = tuples.getFirst();
     assertEquals("A", stats.getString("min_stringx"));
     assertEquals("C", stats.getString("max_stringx"));
     assertEquals("aaa", stats.getString("min_textx"));
@@ -2714,7 +2713,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
   private String toStatsSql(List<String> types) {
     StringBuilder sb = new StringBuilder();
     for (String type : types) {
-      if (sb.length() > 0) {
+      if (!sb.isEmpty()) {
         sb.append(", ");
       }
       sb.append(min("t" + type)).append(", ").append(min("p" + type));
@@ -2783,7 +2782,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
       results =
           expectResults(
               "SELECT id FROM $ALIAS ORDER BY id ASC OFFSET " + i + " FETCH NEXT 1 ROW ONLY", 1);
-      String id = results.get(0).getString("id");
+      String id = results.getFirst().getString("id");
       if (id.startsWith("0")) id = id.substring(1);
       assertEquals(i + 1, Integer.parseInt(id));
     }
@@ -2813,7 +2812,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
         expectResults(
             "SELECT COUNT(1) AS total_rows, COUNT(distinct str_s) AS distinct_str, MIN(str_s) AS min_str, MAX(str_s) AS max_str FROM $ALIAS",
             1);
-    Tuple firstRow = tuples.get(0);
+    Tuple firstRow = tuples.getFirst();
     assertEquals(maxDocs, firstRow.getLong("total_rows").longValue());
     assertEquals(cardinality, firstRow.getLong("distinct_str").longValue());
 
@@ -2830,7 +2829,7 @@ public class TestSQLHandler extends SolrCloudTestCase {
     tuples =
         expectResults(
             "SELECT APPROX_COUNT_DISTINCT(distinct str_s) AS approx_distinct FROM $ALIAS", 1);
-    firstRow = tuples.get(0);
+    firstRow = tuples.getFirst();
     assertEquals(cardinality, firstRow.getLong("approx_distinct").longValue());
 
     tuples =
@@ -2994,13 +2993,13 @@ public class TestSQLHandler extends SolrCloudTestCase {
     if (limit > 0) sql += " LIMIT " + limit;
     List<Tuple> results = expectResults(sql, 1);
     if (expected != null) {
-      assertEquals(expected, results.get(0).get(mvField));
+      assertEquals(expected, results.getFirst().get(mvField));
     } else {
-      assertNull(results.get(0).get(mvField));
+      assertNull(results.getFirst().get(mvField));
     }
 
     if (expected != null) {
-      String crit = "'" + expected.get(0) + "'";
+      String crit = "'" + expected.getFirst() + "'";
       sql = "SELECT " + projection + " FROM $ALIAS WHERE " + mvField + "=" + crit;
       if (limit > 0) sql += " LIMIT " + limit;
       expectResults(sql, expCount);
